@@ -44,6 +44,7 @@ class KFnKeys : public QWidget {
 public:
 	// constructor
   KFnKeys(QWidget *parent, char *name=0);
+  void updateShortcuts();
 
 private:
 	QPushButton *F2 ,*F3,*F4,*F5,*F6,*F7,*F8,*F9,*F10;
