@@ -107,6 +107,7 @@ class Krusader : public KParts::MainWindow {
     static KAction *actSelectColorMask, *actMultiRename, *actAllFilter, *actOpenLeftBm, *actOpenRightBm;
     static KAction *actNewTab, *actDupTab, *actCloseTab, *actPreviousTab, *actNextTab, *actSplit; 
 	 static KAction *actCombine, *actUserMenu, *actSyncDirs;
+	 static KAction *actF2, *actF3, *actF4, *actF5, *actF6, *actF7, *actF8, *actF9, *actF10;
     static KToggleAction *actToggleTerminal;
     static KRadioAction *actMarkNewerAndSingle, *actMarkNewer, *actMarkSingle, 
                         *actMarkDifferentAndSingle, *actMarkDifferent;
@@ -204,5 +205,14 @@ class Krusader : public KParts::MainWindow {
 #define krUserMenu        Krusader::App->actUserMenu
 #define krUserAction      Krusader::App->userAction
 #define krExpander        Krusader::App->expander
+#define krF2				  Krusader::App->actF2
+#define krF3				  Krusader::App->actF3
+#define krF4				  Krusader::App->actF4
+#define krF5				  Krusader::App->actF5
+#define krF6				  Krusader::App->actF6
+#define krF7				  Krusader::App->actF7
+#define krF8				  Krusader::App->actF8
+#define krF9				  Krusader::App->actF9
+#define krF10				  Krusader::App->actF10
 
 #endif
