@@ -1,4 +1,5 @@
 ======================
+    ADDED: Fn keys can have custom shortcuts
     ADDED: krusader can be resized to a small size even with Fn keys showing
     ADDED: Total-commander style refresh (at last)
     ADDED: ctrl-up arrow (from the panel) goes up to the origin bar
